// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`review screen e2e initial render: progress strip + first record + primary prediction 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Lunch at Zomato Bangalore                                                                    │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  █ Uber ride to airport                                                                            
  ▆ Amazon order #12345                                                                             
  ▄ Netflix monthly                                                                                 
  █ Salary credit October                                                                           
  █ Rent transfer to landlord                                                                       
  ▇ Coffee at Blue Tokai                                                                            
                                                                                                    
  [llm:gpt-4]   →   food  [92%]                                                                     
                                                                                                    
                                                                                                    
  1 food >                                                                                          
  2 travel                                                                                          
  3 other                                                                                           
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t]   
 stats ┊[?] help                                                                                    
                                                                                                    
"
`;

exports[`review screen e2e pressing 'a' writes an accepted review row and advances counter 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  1 / 9             Reviewed: 1 / 10  ·  Skipped: 0  ·  Pending: 9  
                                                                                                    
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Uber ride to airport                                                                         │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  ▆ Amazon order #12345                                                                             
  ▄ Netflix monthly                                                                                 
                                                                                                    
  [llm:gpt-4]   →   travel  [88%]                                                                   
                                                                                                    
                                                                                                    
  1 food                                                                                            
  2 travel >                                                                                        
  3 other                                                                                           
                                                                                                    
                                                                                                    
  history                                                                                           
                                                                                                    
  +  food  Lunch at Zomato Bangalore                                                                
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t]   
 stats ┊[?] help                                                                                    
                                                                                                    
"
`;

exports[`review screen e2e pressing 'j' moves to the next record without writing a review 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  2 / 10           Reviewed: 0 / 10  ·  Skipped: 0  ·  Pending: 10  
                                                                                                    
  █ Lunch at Zomato Bangalore                                                                       
 ┌────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ ▶ Uber ride to airport                                                                         │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────┘ 
  ▆ Amazon order #12345                                                                             
  ▄ Netflix monthly                                                                                 
  █ Salary credit October                                                                           
  █ Rent transfer to landlord                                                                       
  ▇ Coffee at Blue Tokai                                                                            
                                                                                                    
  [llm:gpt-4]   →   travel  [88%]                                                                   
                                                                                                    
                                                                                                    
  1 food                                                                                            
  2 travel >                                                                                        
  3 other                                                                                           
                                                                                                    
                                                                                                    
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t]   
 stats ┊[?] help                                                                                    
                                                                                                    
"
`;

exports[`review screen e2e pressing 'a' across all records empties pending and shows completion 1`] = `
"                                                                                                    
  LabelLens  tiny.jsonl  Pending  0 / 0            Reviewed: 10 / 10  ·  Skipped: 0  ·  Pending: 0  
                                                                                                    
                                                                                                    
                                                                                                    
   All records reviewed. Press q to quit.                                                           
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
  history                                                                                           
                                                                                                    
  +  ENTRY_START  Senior Engineer at Acme                                                           
  ·   ·   ·   ·   ·   ·   ·   ·   ·   ·                                                             
  +  food         Refund from Swiggy                                                                
  ·   ·   ·   ·   ·   ·   ·   ·   ·   ·                                                             
  +  other        ATM withdrawal                                                                    
  ·   ·   ·   ·   ·   ·   ·   ·   ·   ·                                                             
  +  food         Coffee at Blue Tokai                                                              
  ·   ·   ·   ·   ·   ·   ·   ·   ·   ·                                                             
  +  rent         Rent transfer to landlord                                                         
  [a] accept ┊[r] relabel ┊[x] reject ┊[s] skip ┊[n] note ┊[gd] doc ┊[Q] queues ┊[:] palette ┊[t]   
 stats ┊[?] help                                                                                    
                                                                                                    
"
`;
